# catmandu

./: .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  DOCKER.md  Dockerfile  Makefile  README.md  catmandu.prd  docker-compose.debug.yml  docker-compose.override.yml  docker-compose.qnap.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test-docker-compose.sh
.roo/rules/: rules.md
architecture/: ARCH-core-layered-architecture.md  recommended-structure.md  start.md
architecture/core/: ARCH-core-cattackle-registry-v1.md  ARCH-core-main-process-v1.md  ARCH-core-mcp-client-manager-v1.md  ARCH-core-message-router-v1.md  ARCH-core-telegram-poller-v1.md
architecture/spec/: ARCH-cattackle-spec-v1.md
cattackles/echo/: .dockerignore  .env.example  Dockerfile  README.md  cattackle.example.toml  cattackle.toml  pytest.ini  requirements.txt
cattackles/notion/: .dockerignore  .env.example  CONFIGURATION.md  Dockerfile  README.md  cattackle.toml  pytest.ini  requirements-test.txt  requirements.txt
docs/: NOTION_DOCKER_DEPLOYMENT.md  chat-logging.md  cost-reporting-quick-reference.md  cost-reporting.md  development-docker.md  docker-build-optimization.md  docker.md  qnap-deployment.md  volume-permissions.md
scripts/: analyze_chats.py  cost_report.py  manage_notion_users.py  setup_qnap_logs.sh  validate_config.py
src/catmandu/: logging.py  main.py
tasks/2025-Q3/: TASK-2025-001-implement-catmandu-core.md  TASK-2025-002-init-project-structure.md  TASK-2025-003-define-core-models.md  TASK-2025-004-implement-fastapi-lifespan.md  TASK-2025-005-implement-cattackle-registry.md  TASK-2025-006-create-echo-cattackle.md  TASK-2025-007-implement-cattackles-api.md  TASK-2025-008-implement-mcp-client-manager.md  TASK-2025-009-implement-message-router.md  TASK-2025-010-implement-telegram-poller.md  TASK-2025-011-create-integration-test-flow.md  (+5 more)
tests/: conftest.py  test_logging_safety.py
(+110 files in other folders)
