[project]
name = "catmandu"
version = "0.1.0"
description = "A modular and extensible Telegram bot."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.8.2",
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
    "pre-commit>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]
